@@ -7,6 +7,7 @@ Version 1.2.6+svn:
    * added sazanami-gothic font (needed for the Japanese translation)
  * multiplayer maps:
    * revised maps: Blitz, Cynsaun Battlefield, Hamlets, Meteor Lake
+   * fixed a crash if the client recieves invalid utf-8
  * misc:
    * really fix the trait OOS so it works correctly on Windows as well
 
